Row legend items wrap fix

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -174,7 +174,6 @@ h3.title {
     padding: 5px 10px 5px;
     border: 1px solid #0F6698;
     box-sizing: border-box;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
     border-radius: 100px;
     font-family: "Roboto", sans-serif;
     font-style: normal;
